--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.css
@@ -1,1 +1,37 @@
 /* start your css here */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    padding: 10px 90px ;
+    background-color: red;
+    display: flex;
+   
+}
+.navbar .logo{
+    color: white;
+    font-size: 30px;
+    padding: 20px 22px;
+    font-weight: bold;
+}
+.navbar ul {
+    list-style: none;
+   
+    margin: 0;
+    padding: 0;
+    display: flex;
+    overflow: auto;
+}
+.navbar li {
+    list-style: none;
+    float: left;
+    padding: 3px 10px ;
+    color: white;
+    display: flex;
+    margin: 10px 40px;
+    font-size: 30px;
+    margin-bottom: 60px;
+   
+}
