--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -1,1 +1,75 @@
-/* start your styling here  */
+.container{
+    width: 1200px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    border: 5px;
+  
+   
+   
+    
+   
+}
+.sedans {
+    border: 3px;
+    color:white;
+   
+    background-color: yellow;
+    border-left: 3px;
+    border-radius: 30px 0px 0 30px ;
+    
+    
+}
+.sedans{flex:1;}
+.suv{flex:1;}
+.luxury{flex:1;}
+
+ h1 {
+    margin-top: 40px;
+    margin-left: 50px;
+
+
+   
+}
+p{
+    margin-top: 40px;
+    margin-left: 50px;
+    align-items: center;
+    margin-right: 30px;
+}
+.learn {
+    width: 140px;
+    height: 40px;
+    border-radius: 20px;
+    background-color: azure;
+    color: green;
+    margin-left: 40px;
+    margin-top: 40px;
+   
+} 
+.suv {
+    border: 3px;
+    color: white;
+    border-color: brown;
+    background-color: green;
+    border-left: 3px;
+}
+.luxury {
+    border: 3px;
+    color: white;
+    border-color: brown;
+    background-color: red;
+    border-left: 3px;
+    border-radius: 0 30px 30px 0 ;
+}
+
+.circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color:black;
+    margin-top: 80px;
+    margin-left: 40px;
+    
+    
+}
