--- a/3-CSS/305-CSS-Flexbox/CSS-305-05/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-05/style.css
@@ -89,6 +89,14 @@
  
 }
 .box1{
+    width: 300px;
+    height: 30px;
+    border-radius: 30px;
+    background-color:rgb(58, 51, 255);
+    margin-left: 10px;
+   
+}
+.box3{
     width: 500px;
     height: 50px;
     border-radius: 30px;
@@ -96,6 +104,8 @@
     margin-left: 100px;
     
 }
+
+
 .box2{
     display: flex;
     width: 800px;
@@ -136,13 +146,8 @@
 .game p{
     margin-left: 5px;
     margin-top: 5px;
-    font-size: 10px;
+    font-size: 15px;
+  border-bottom: 2px;
    
 
-}
-.done {
-    width: 50px;
-    height: 30px;
-    margin-top: 20px;
-    color: aliceblue;
 }
