--- a/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-03/style.css
@@ -67,7 +67,7 @@ p{
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    background-color:black;
+    background-color:white;
     margin-top: 80px;
     margin-left: 40px;
     
