--- a/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-02/style.css
@@ -1,28 +1,238 @@
+body{
+    background-color: brown;
+
+   
+}
+
 .main {
     width: 400px;
-    height: 500px;
+    height: 340px;
    
     background-color: aquamarine;
-    
-    
-    
-}
- #wrapper{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.box{
-    width: 50px;
-    height: 3pxpx;
-    background-color: red;
     border-radius: 10px;
-  
-    margin: 12px;
-    box-shadow: var(#f5f4f6);
+   margin: 100px;
+   border-bottom: 20px;
+   border-color: black;
+    
+    
+    
+}
+.b1{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+    
+   
+    
+}
+.b2{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+}
+.b3{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+}
+.b4{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+}
+.b5{
+    display: flex;
+    text-align: center;
+    font-size: 30px;
+}
+.box1{
+    width: 70px;
+    height: 45px;
+    background-color: yellow;
+    margin-left: 10px;
+    margin-top: 10px;
+    border-radius: 3px;
+    box-shadow: 0 3px 3px  0 #010101;
+    color: gray;
 }
 .box2{
-flex-grow: 3;
+    width: 300px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 10px;
+    margin-top: 10px;
+    border-radius: 5px;
+    box-shadow: 0 3px 3px  0 #010101;
+    color: aliceblue;
+    text-align:  right;
+   
+ 
 }
+.box3{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}.box4{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box5{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box6{
+    width: 70px;
+    height: 45px;
+    background-color: yellow;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    border-width: 5px;
+    color: gray;
+  
+}
+.box7{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}.box8{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box9{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box10{
+    width: 70px;
+    height: 45px;
+    background-color: yellow;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    border-width: 5px;
+    color: gray;
+  
+}
+.box11{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}.box12{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box13{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box14{
+    width: 70px;
+    height: 45px;
+    background-color: yellow;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    border-width: 5px;
+    color: gray;
+  
+}
+.box15{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 10px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}.box16{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box17{
+    width: 70px;
+    height: 45px;
+    background-color: gray;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    color: aliceblue;
+}
+.box18{
+    width: 70px;
+    height: 45px;
+    background-color: yellow;
+    margin-left: 30px;
+    margin-top: 20px;
+    border-radius: 5px;
+    box-shadow: 3px 3px 3px  0 #010101;
+    border-width: 5px;
+   
+    color: gray;
+  
+}
+
+
+ 
