--- a/3-CSS/306-CSS-Grid/CSS-306-01/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-01/style.css
@@ -1,1 +1,109 @@
-/* start your styling here  */
+body{
+    background-color: black;
+}
+
+
+.main{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows : repeat(4,200px);
+}
+.item1{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item2{
+   
+    margin: 3px;
+    background-color: orange;
+    border: 6px solid black;
+    grid-row: 1/3;
+    grid-column:2/5 ;
+}
+.item3{
+   
+    margin: 3px;
+    background-color: pink;
+    border: 6px solid black;
+    grid-row: 1;
+    grid-column: 5/7;
+
+    
+
+   
+    
+
+}
+.item4{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item5{
+   
+    margin: 3px;
+    background-color: pink;
+    border: 6px solid black;
+    grid-row: 2;
+    grid-column: 5/7;
+   
+}
+.item6{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item7{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item8{
+   
+    margin: 3px;
+    background-color:orange;
+    border: 6px solid black;
+    grid-row: 3/5;
+    grid-column: 3/5;
+}
+.item9{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item10{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item11{
+   
+    margin: 3px;
+    background-color: blue;
+    border: 6px solid black;
+}
+.item12{
+   
+    margin: 3px;
+    background-color: yellow;
+    border: 6px solid black;
+}
+.item13{
+   
+    margin: 3px;
+    background-color:green;
+    border: 6px solid black;
+}
+.item14{
+   
+    margin: 3px;
+    background-color: red;
+    border: 6px solid black;
+}
