--- a/3-CSS/306-CSS-Grid/CSS-306-03/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/style.css
@@ -1,1 +1,61 @@
-/* start your styling here  */
+
+
+.main{
+  display: grid;
+ 
+}
+  
+
+.header{
+  display: grid;
+  font-size: 10px;
+  grid-template-columns: repeat(5,100px);
+  grid-auto-flow: column;
+  grid-auto-columns: 1fr;
+  align-items: center;
+
+}
+.part{
+  display: grid;
+  grid-template-columns:repeat(4,400px) ;
+  grid-template-rows: repeat(3,120px);
+ 
+  background-color: black;
+  
+
+}
+.box1{
+ background-color: red;
+ grid-column: span 2;
+ 
+ gap: 1rem;
+}
+.box2{
+  background-color: whitesmoke;
+ }
+ .box3{
+  background-color: whitesmoke;
+ 
+  
+ }
+ .box4{
+  background-color:whitesmoke;
+  grid-column: 4/6;
+  grid-row: 1/3;
+ }
+ .box5{
+  background-color: pink;
+ }
+ .box6{
+  background-color: orange;
+ }
+ .box7{
+  background-color:yellow;
+ }
+ .box8{
+  background-color:brown;
+ }
+ .box9{
+  background-color: red;
+ }
+        
