--- a/3-CSS/305-CSS-Flexbox/CSS-305-06/style.css
+++ b/3-CSS/305-CSS-Flexbox/CSS-305-06/style.css
@@ -1,47 +1,131 @@
-.nav{
+*{
+    padding: 0;
+    margin: 0;
+}
+nav{
     display: flex;
-    width: 1500px;
-    height: 100px;
+    justify-content: center;
+    padding: 20px;
+    height: 80px;
  
+  
     
 }
-.nav .log{
-    margin-left: 100px;
+.logo{
+    margin-left: 10px;
+ 
+}
+.menu{
+    margin-left: 350px;
+    display: flex;
+  
+   
+}
+.icon{
+    color: gray;
+    padding-left: 30px;
+ text-align: center;
+ font-size: 20px;
+ align-items: center;
+    
+    
+   
+}
+.icon p{
+    font-size: 15px;
 }
 
-.log{
-    width: 300px;
-    height: 60px;
+.btn1{
+    margin-left: 10px;
+    border-radius: 27px;
+    padding: 8px 17px;
+    font-size: 15px;
+    font-weight: bold;
+    color: grey;
+    border: none;
+ 
+ background-color: transparent;
+ 
+}
+.btn2{
+    margin-left: 10px;
+    border-radius: 30px;
+    padding: 13px 28px;
+    color: #0a66c2;
+    border: 2px solid #0a66c2;
+    background-color: transparent;
+ 
+    font-size: 15px;
+    font-weight: bold;
+    margin-right: 10px;
+}
+.fa-pipe{
+    margin-left: 30px;
+   
+   
+}
+section{
+    display: flex;
+    justify-content: center;
+   
    
 
-    
 }
-.image{
-    margin-left: 500px;
+.img{
+    padding-left: 10px;
 }
-
-img{
-    width: 60px;
-    height: 60px;
-    margin-left: 10px;
+form{
+    margin-left: 150px;
 }
-.btn{
-    width: 80px;
-    height: 60px;
+.p1{
+    font-size: 56px;
     color: brown;
-    background-color: yellow;
-    margin-left: 50px;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
+   font-weight: 200;
+   margin-bottom: 30px;
 }
-.sign{
-    width: 80px;
-    height: 60px;
-    border-radius: 20px;
-    border-color: green;
-    border-width: 5px;
-    color: orange;
-    margin-left: 50px;
-    margin-right: 50px;
-    background-color: black;
+form input{
+    width: 430px;
+    height: 30px;
+    margin-bottom: 15px;
+    padding: 10px;
     
-
 }
+.p2{
+    width: 400px;
+    color: rgba(0,0,0,0.6);
+    margin: 12px 0;
+    
+  
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
+}
+a{
+    color:  #0a66c2;
+    font-size: 14px;
+    font-family: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', 'Fira Sans', Ubuntu, Oxygen, 'Oxygen Sans', Cantarell, 'Droid Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Lucida Grande', Helvetica, Arial, sans-serif;
+}
+.btn3{
+    width: 430px;
+    height: 60px;
+    border-radius: 30px;
+    background-color: #0a66c2;
+    color: aliceblue;
+    font-size: 20px;
+    border: none;
+   margin-bottom: 30px;
+}
+.p4{
+    margin-left: 100px;
+    font-size: 16px;
+    color: rgba(0,0,0,0.6);
+    margin-top: 30px;
+}
+
+
+
+
+
+
+
+
+
