--- a/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.css
+++ b/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.css
@@ -1,6 +1,7 @@
 body{
     margin: 0%;
-    background-color: wheat;
+    background-color: blanchedalmond;
+   
 }
 .header{
    text-align: center;
