--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
@@ -1,1 +1,175 @@
-/* start your styling here  */
+*{
+    margin: 0;
+    padding: 0;
+}
+nav{
+    width: 100%;
+    height: 70px;
+    background-color:rgb(255,203,112) ;
+    display: flex;
+    align-items: center;
+    box-shadow: 10px 10xp 10px 10px solid rgba(5, 5, 5, -6);
+}
+.menu{
+    
+    margin-left: 700px;
+    padding-top: 10px;
+    display: flex;
+    
+}
+.logo img{
+    padding-top: 10px;
+    padding-left: 40px;
+    width: 150px;
+    height: auto;
+
+}
+.btn1{
+    width: 120px;
+    height: 50px;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: transparent;
+    
+
+}
+.btn1:hover{
+    border-top: 4px solid green;
+    color:green ;
+}
+.btn3{
+    width: 120px;
+    height: 50px;
+    outline: none;
+    border: none;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: transparent;
+    
+}
+.btn3:hover{
+    border-top: 4px solid green;
+    color:green ;
+}
+.dropdown{
+    display: none;
+     position: absolute;
+     background-color: #f9f9f9;
+     min-width: 300px;
+     min-height: 100px;
+     z-index: 1;
+     margin-top: 50px;
+     margin-left: 80px;
+     
+  
+}
+.btn3:hover + .dropdown{
+    display: block;
+
+}
+a{
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    padding: 10px;
+}
+a:hover{
+    color: gray;
+}
+.container{
+    display: flex;
+  
+}
+.image{
+    margin-left: 100px;
+}
+.image img{
+    width: 340px;
+    height: auto;
+}
+.icon{
+    margin-left: 100px;
+    align-items: center;
+    margin-top: 30px;
+    
+}
+.icon i{
+    font-size: 30px;
+    margin-right: 30px;
+}
+section{
+    height: auto;
+}
+.content {
+    margin-left: 150px;
+    margin-top:10px ;
+    width: 600px;
+
+
+}
+.content h1{
+    margin-bottom: 30px;
+    font-size: 30px;
+    font-style: italic;
+}
+.content p{
+    color: rgba(100, 100, 100, 0.922);
+}
+.page{
+    height: 200px;
+    background-color: rgba(100, 100, 100, 0.922) ;
+    text-align: center;
+    align-items: center;
+
+   
+}
+.btn8{
+    margin-top: 70px;
+    width: 250px;
+    height: 50px;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    font-size: 18px;
+    margin-right: 30px;
+
+}
+.btn8:hover{
+   color: rgba(100, 100, 100, 0.922);
+}
+.btn9:hover{
+    color: rgba(100, 100, 100, 0.922);
+ }
+.btn9{
+    margin-top: 70px;
+    width: 150px;
+    height: 50px;
+    border-radius: 7px;
+    outline: none;
+    border: none;
+    font-size: 18px;
+
+
+
+}
+.footer{
+    height: 200px;
+    background-color: #173e43;
+    text-align: center;
+    color: white;
+  
+
+}
+.photo{
+   padding-top: 50px;
+}
+.photo img{
+   
+    width: 150px;
+    height: auto;
+
+}
+
+
