--- a/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.css
+++ b/4-Advance-JS/406-Data-visualization/AdvanceJS-406-01/index.css
@@ -75,8 +75,8 @@ input{
 #grid{
     margin-left: 100px;
     display: grid;
-    grid-template-columns: auto auto auto auto auto ;
-    grid-template-rows: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto auto;
   
 
 
