--- a/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
+++ b/3-CSS/308-CSS-Pseudo-Classes/CSS-308-03/style.css
@@ -10,6 +10,15 @@ nav{
     align-items: center;
     box-shadow: 10px 10xp 10px 10px solid rgba(5, 5, 5, -6);
 }
+
+.functon{
+    width: 100%;
+    height: 400px;
+    background-color: aquamarine;
+}
+.working{
+    display: none;
+}
 .menu{
     
     margin-left: 700px;
@@ -80,7 +89,7 @@ a:hover{
 }
 .container{
     display: flex;
-    background-image: url(shiva.jpg);
+  /*  background-image: url(shiva.jpg);*/
   
 }
 .image{
