--- a/Mct/index.css
+++ b/Mct/index.css
@@ -364,6 +364,7 @@ border: 1px solid rgba(0,0,0,.25);
 }
 
 .container2{
+
     width: 1130px;
     height: auto;
     background-color: #FFFFFF;
@@ -401,12 +402,17 @@ border: 1px solid rgba(0,0,0,.25);
 
 }
 a {
-    margin-left: 30px;
+ 
     font-size: 20px;
     text-decoration: none;
+   
     
    
     font-family: Lato,"Helvetica Neue",Arial,Helvetica,sans-serif;
+}
+li{
+    margin-left: 20px;
+    font-size: 30px;
 }
 a:hover{
     background-color:rgba(34,36,38,.15) ;
