--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-02/style.css
@@ -1,1 +1,49 @@
+.form {
+    width: 600px;
+    height:550px ;
+    background-color: bisque;
+    padding-top: 5px;
+   
+   
+}
+h2 {
+    color:blue;
+    margin-left: 40px;
+    
+}
+.news {
+    margin: 40px;
+}
 
+.form input[type="name"], input[type="last"],input[type="email"], input[type="date"]{
+    width: 500px;
+    height: 30px;
+    border-bottom: 1px solid black;
+    
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-left: 40px;
+    padding: 20px;
+
+}
+.form input[type="checkbox"]{
+    width: 80px;
+    height: 30px;
+    border-radius: 5px;
+   
+   
+}
+
+
+.form input[type="button"] {
+    width: 100px;
+    height: 40px;
+    margin-left: 250px;
+    margin-top: 20px;
+    border-radius: 5px;
+    border-color:red;
+    background-color: transparent;
+  
+   
+   
+}
