--- a/3-CSS/306-CSS-Grid/CSS-306-03/style.css
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/style.css
@@ -1,61 +1,150 @@
 
 
-.main{
-  display: grid;
- 
-}
-  
 
-.header{
-  display: grid;
-  font-size: 10px;
-  grid-template-columns: repeat(5,100px);
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
-  align-items: center;
 
-}
-.part{
-  display: grid;
-  grid-template-columns:repeat(4,400px) ;
-  grid-template-rows: repeat(3,120px);
- 
-  background-color: black;
+  body{
+    /* margin-top: 30px;
+    margin-left: 12px;
+    width: 1479px; */
+    margin: 0;
+    padding: 0;
+    background-color: rgb(26, 65, 123);
+  }
+  /*  <!-- navbar section --> */
+   .head-content{
+    margin-top: 30px;
+    text-align: center;
+    padding-left: 508px;
+   }
+  .navbar{
+      display:flex;
+       
+  }
+  .navbar div button{
+    margin-left: 40px;
+  }
+  .logo img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 40px;
+  }
+  button{
+    border:  none;
+    background-color: black;
+    color:white;
+    width: 72px;
+    height: 18px;
+    font-size: 10px;
   
-
-}
-.box1{
- background-color: red;
- grid-column: span 2;
- 
- gap: 1rem;
-}
-.box2{
-  background-color: whitesmoke;
- }
- .box3{
-  background-color: whitesmoke;
- 
+  }
+  /*  grids section content*/
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-gap: 2px;
+    background-color: rgb(0, 0, 0);
+    margin-top: 20px;
+   
+  }
+  .box{
+    /* border: 2px solid black; */
+    border-top: 4px solid rgb(6, 6, 41);
+  }
+  .b1 {
+    grid-column: 1 / 2;
+    grid-row: 1/ 2;
+    
+  }
+  .b2 {
+    grid-column: 2 / 3;
+    grid-row: 1/2;
+    
+  }
+  .b3 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+  }
+  .b4 {
+    grid-column: 2 / 3 ;
+    grid-row: 2/3;
+  }
+  .b5 {
+    grid-column: 3/4;
+    grid-row: 1 /3;
+  }
+  .b6 {
+    grid-column: 4/5;
+    grid-row: 1/3;
+  }
+  .b7 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+  } 
+  .b8 {
+    grid-column: 2/4;
+    grid-row: 3/4;
+  } 
+  .b9 {
+    grid-column: 4/5;
+    grid-row: 3/4;
+  } 
+  .box img{
+    height:fit-content;
+  }
   
- }
- .box4{
-  background-color:whitesmoke;
-  grid-column: 4/6;
-  grid-row: 1/3;
- }
- .box5{
-  background-color: pink;
- }
- .box6{
-  background-color: orange;
- }
- .box7{
-  background-color:yellow;
- }
- .box8{
-  background-color:brown;
- }
- .box9{
-  background-color: red;
- }
-        
+  .b1 img{
+      width:367.5px;
+      height: 283px;
+  }
+  .b2 img{
+    width:367.5px;
+    height: 283px;
+  }
+  .b3 img{
+    width:367.5px;
+    height:280px;
+  }
+  .b4 img{
+    width:367.5px;
+    height:280px;
+  }
+  .b5 img{
+    width: 368px;
+    height: 575px;
+  }
+  .b6 img{
+    width: 368px;
+    height: 575px;
+  }
+  .b7 img{
+    width:367.5px;
+    height: 281px;
+  }
+  .b8 img{
+     width: 745.5px;
+     height: 281px;
+  }
+  .b9 img{
+    width: 369px;
+    height: 279px;
+  }
+  
+  /*  bottom section footer  */
+  .bottom-content{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    background-color: rgb(37, 103, 96);
+    /* margin-top: 14px; */
+  }
+  .bottom{
+    display: flex;
+  }
+  .bottom div p{
+    padding-left: 12px;
+  }
+  .last-content p{
+    padding-right: 20px;
+  }
